añadiendo sur occidente app

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         . Esta región se ha caracterizado por la conjugación
                         del accionar de los diferentes actores armados que hacen presencia
                         y se disputan los territorios (agentes estatales, paramilitares e insurgentes), motivados por
-                        intereses geoestratégicos
+                        intereeses geoestratégicos
                         sobre el Puerto de Buenaventura, la salida hacia al pacífico y hacia el Ecuador.
                         También hacia las riquezas naturales,
                         minerales y los yacimientos de hidrocarburos que posee la zona.
